--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,15 @@
+# BCRYPT
 BCRYPT_SALT_ROUNDS=
+
+# DATABASE
 MONGO_URI=
+
+# JWT
 JWT_SECRET=
 JWT_REFRESH_SECRET=
+
+# EMAIL
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
