--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,55 @@
-# BCRYPT
-BCRYPT_SALT_ROUNDS=
 
-# DATABASE
-MONGO_URI=
+# ========================
+# 🔐 SECURITY
+# ========================
+
+# Bcrypt salt rounds (recommend 10–12 for dev)
+BCRYPT_SALT_ROUNDS=
 
 # JWT
 JWT_SECRET=
 JWT_REFRESH_SECRET=
 
-# EMAIL
+# ========================
+# 🛢️ DATABASE
+# ========================
+
+# MongoDB (Docker internal host)
+MONGO_URI=
+
+# ========================
+# 📧 EMAIL
+# ========================
+
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
 
-# REDIS
+# ========================
+# 🚦 REDIS
+# ========================
+
 REDIS_HOST=
 REDIS_PORT=
 
-# APP
+# ========================
+# 📊 ELASTICSEARCH
+# ========================
+
+ELASTICSEARCH_HOST=
+ELASTICSEARCH_PORT=
+ELASTICSEARCH_NODE=
+ELASTICSEARCH_INDEX=
+
+# ========================
+# 📈 KIBANA
+# ========================
+
+KIBANA_PORT=
+
+# ========================
+# 🌐 APP CONFIG
+# ========================
+
 APP_URL=
